# PoG-PFN

./: .gitignore  IMPLEMENTATION.md  README.md  TRAINING_GUIDE.md  main.py  pyproject.toml  quickstart.sh  report.aux  report.out  report.tex  requirements.txt
configs/: default.yaml
evaluation_report/: metrics_summary.csv  metrics_summary.json
pog_pfn/: __init__.py  utils.py
pog_pfn/data/: __init__.py  claim_generator.py  dataset.py  scm_generator.py
pog_pfn/models/: __init__.py  claim_encoder.py  dataset_encoder.py  effect_estimator.py  graph_posterior.py  identification.py  pog_pfn.py
pog_pfn/training/: __init__.py  losses.py
scripts/: evaluate.py  generate_final_report.py  investigate_leakage.py  launch_distributed.sh  train.py  train_config.py  train_curriculum.py  train_distributed.py  train_extended.py  verify_claims.py  verify_stability.py
